--- a/config/jobsConfig.json
+++ b/config/jobsConfig.json
@@ -8,5 +8,6 @@
   "staleBuyOrderMinutes": 10,
   "warningLogIntervalMinutes": 10,
   "lowBalCacheTTLMinutes": 5,
-  "preSelectSlotSleepMilliseconds": 200
+  "preSelectSlotSleepMilliseconds": 200,
+  "buySellMemCacheTtlSeconds": 3600
 }
